@@ -2,12 +2,12 @@ package App::Doh;
 
 use 5.010001;
 use strictures;
-use version; our $VERSION = qv( sprintf '0.14.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.14.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Class::Usul::Functions  qw( env_prefix );
 
 sub env_var {
-   my ($class, $var, $v) = @_; my $k = (env_prefix $class)."_${var}";
+   my ($class, $var, $v) = @_; my $k = (env_prefix __PACKAGE__)."_${var}";
 
    return defined $v ? $ENV{ $k } = $v : $ENV{ $k };
 }
@@ -37,7 +37,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.14.$Rev: 1 $ of L<App::Doh>
+This documents version v0.14.$Rev: 2 $ of L<App::Doh>
 
 =head1 Description
 
